--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "lucide-react": "^0.484.0",
     "next": "15.2.4",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "react-redux": "^9.2.0",
